# ccts

./: README.md  add_run_model_page.py  h.txt  make_ccts_dashboard_full.py  pyproject.toml  run_simulation.py
ccts/: __init__.py  agent.py  agent1.py  analysis.py  ccts_conformance_audit.py  config.py  market.py  model.py  requirements.txt  run_simulation.py  timeseries.py  utils.py
ccts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ccts_dashboard_full/: Dockerfile  app.py  docker-compose.yml  requirements.txt
ccts_dashboard_full/.streamlit/: config.toml
ccts_dashboard_full/pages/: 0_Run_Model.py  1_Overview.py  2_Market_Monitor.py  3_Compliance_Policy.py  4_Firms_Explorer.py  5_Abatement_Projects.py  6_Credits_Vintages.py  7_Transactions.py  8_Scenario_Lab.py  9_Exports.py
ccts_dashboard_full/sample_output/: agent_history.csv  annual_summary.csv  orderbook_snapshots.json  summary.txt  timeseries.csv  transactions.csv
ccts_dashboard_full/utils/: data_loader.py  helpers.py  schema.py
input/: custom_config.json  firm.csv  firms11.csv  firmstest.csv
output/: agent_history.csv  annual_summary.csv  enhanced_ccts_simulation_results.xlsx  orderbook_snapshots.json  results.xlsx  summary.txt  timeseries.csv  transactions.csv
output_runs/run_20250825_231043_baseline/: enhanced_ccts_simulation_results.xlsx  timeseries.csv
output_runs/run_20250825_231950_baseline/: agent_history.csv  enhanced_ccts_simulation_results.xlsx  orderbook_snapshots.json  summary.txt
