[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccts"
version = "0.1.0"
description = "Carbon Capture Trading Simulation (CCTS) toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"                        # ✅ keep the license expression
authors = [{ name = "Ankit Sharma" }]
keywords = ["carbon", "market", "simulation", "energy", "electricity"]
classifiers = [
  "Programming Language :: Python :: 3",
  # "License :: OSI Approved :: MIT License",  <-- ❌ remove this line
  "Operating System :: OS Independent"
]

dependencies = [
  "mesa==2.3.2",
  "numpy>=1.20.0",
  "pandas>=1.4.0",
  "scipy>=1.7.0",
  "matplotlib>=3.5.0",
  "XlsxWriter>=3.0.0",
  "openpyxl"
]

[project.urls]
Homepage = "https://github.com/ankitsharmaMCET/ccts"
Issues   = "https://github.com/ankitsharmaMCET/ccts/issues"

[project.scripts]
ccts-sim = "ccts.run_simulation:main"

[tool.setuptools.packages.find]
include = ["ccts", "ccts.*"]
